# xor

./: .gitignore  CLAUDE.md  Makefile  ProjectHome.md  README.md  ReadMe.txt  StdAfx.cpp  StdAfx.h  bench.sh  pi5_run.sh  plot_asm_comparison.py  plot_combined.py  plot_results.py  plot_rust_comparison.py  plot_x86.py  results.txt  results_x86.txt  test.sh  test_unit  test_unit.cpp  usage.md  xor.cpp  xor.cpp.fullcircle  xor.dsp  xor.dsw  xor.opt  xor.sln  xor.vcproj
.claude/: settings.json
asm/: Makefile  main.cpp  test_unit_asm  xor_asm.s
rust/: Cargo.toml
wiki/: usage.wiki
